--- a/project-1/src/App.css
+++ b/project-1/src/App.css
@@ -4,25 +4,37 @@
     box-sizing: border-box;
 }
 body{
-    /* background: linear-gradient(to bottom, #000000 , #5c5c5c); */
+    overflow: hidden;
     height: 100vh;
+    max-width: 1400px;
+    width: 100%;
+    background: linear-gradient(120deg, #000000, #313030);
 }
 .nav-bar{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 1rem 4rem;
     align-items: center;
-    max-width: 1404px;
+    max-width: 1400px;
     margin: 0 auto;
     width: 100%;
-    height: 74px;
+    height: 80px;
 }
 .logo img{
-    width: 74px;
-    height: 76px;
+    width: 100%;
+    height: 80px;
     object-fit: contain;
+    
 }
 .nav-menus{
     display: flex;
-    gap: 28px;
+    gap: 80px;
     list-style: none;
+}
+.nav-menus li{
+    font-family: "Barlow", sans-serif;
+    color: #ffffff;
+    font-weight: 500;
+    font-style: italic;
+    font-size: 15px;
 }
