--- a/project-2/src/components/ContactForm/style/ContactFormStyle.module.css
+++ b/project-2/src/components/ContactForm/style/ContactFormStyle.module.css
@@ -7,14 +7,19 @@
     border-radius: 8px;
     padding: 10px;
     height: 550px;
+    display: flex;
+    gap: 20px;
 
 }
 .info{
     width: 450px;
-    height: 540px;
+    height: 530px;
     background-color: #011C2B;
     border-radius: 8px;
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 75px;
 }
 
 .top_text h3{
@@ -62,4 +67,91 @@
 .social_links .links i{
     font-size: 20px;
     color: #FFFFFF;
+}
+
+.container_form{
+    width: 730px;
+    height: 530px;
+    margin: 2rem auto;
+}
+.all{
+    width: 600px;
+    margin: 0 auto;
+}
+.container{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    justify-content: space-around;
+}
+.container .form_group{
+    width: 278px;
+    margin:15px 0px;
+}
+.container .form_group input{
+    width: 278px !important;
+    height: 40px;
+    font-family: "Poppins", sans-serif; 
+    font-weight: 400;
+    font-size: 12px !important;
+    border-bottom: 1px solid #000000 !important;
+    all: unset;
+}
+.form_label{
+    font-family: "Poppins", sans-serif; 
+    font-weight: 500;
+    font-size: 12px;
+}
+.select_text{
+    font-family: "Poppins", sans-serif; 
+    font-weight: 700;
+    font-size: 14px;
+    margin: 20px 0;
+}
+.select_container .form_group{
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+.select_container{
+    display: flex;
+    gap:20px;
+    margin-bottom: 20px;
+}
+.msg_cont{
+    width: 595px;
+    height: 50px;
+}
+.msg_cont .form_group .msg{
+    width: 595px !important;
+    resize: none;
+    all: unset;
+    border-bottom: 1px solid #000000 !important;
+    font-family: "Poppins", sans-serif; 
+    font-weight: 500;
+    font-size: 14px;
+    padding: 10px 0px;
+}
+
+.submit_btn{
+    width: 595px;
+    height: 50px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 4rem;
+}
+.submit{
+    all: unset;
+    font-family: "Poppins", sans-serif; 
+    font-weight: 500;
+    font-size: 16px;
+    padding: 15px 48px;
+    background: #011C2A;
+    color: #FFFFFF;
+    border-radius: 8px;
+    cursor: pointer;
+}
+.ml{
+    margin-left: 2rem;
 }
