--- a/project-2/src/components/ContactForm/style/ContactFormStyle.module.css
+++ b/project-2/src/components/ContactForm/style/ContactFormStyle.module.css
@@ -156,3 +156,9 @@
 .ml{
     margin-left: 2rem;
 }
+.text_red{
+    color: #94060d;
+    font-family: "Poppins", sans-serif; 
+    font-weight: 400;
+    font-size: 12px;
+}
